--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,23 @@
 .guests-list__item_arrived{
   text-decoration: line-through;
 }
+
+.App{
+  max-width: 500px;
+  margin: 50px auto 0;
+}
+.arrived,
+.arrived:hover{
+  text-decoration: line-through;
+}
+.form-control{
+  margin-bottom: 15px;
+}
+.list-group-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.list-group-item input{
+  cursor: pointer;
+}
